# semantic-modelling

./: docker-compose.dev.yml  full directory structure.txt  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.development  apply_statistics_fix.py  cleanup-duplicate-diagrams.py  diagnose_and_fix_password.py  diagonise errors.py  fix-layouts-schema.sh  fix_diagram_column.py  fix_model_statistics.sql  init_database.py  pyproject.toml  reset_admin_password.py  verify_enum_fix.py
backend/app/: config.py  config_old.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  diagrams.py  export.py  folders.py  import_data.py  layouts.py  lineage.py  models.py  users.py  validation.py  workspaces.py
backend/app/cache/: redis_client.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/exporters/: base_exporter.py  cypher_exporter.py  sql_exporter.py
backend/app/graph/: client.py
backend/app/layout/: layout_engine.py
backend/app/layout/engines/: force_layout.py  layered_layout.py  manual_layout.py
backend/app/middleware/: __init__.py  auth_middleware.py  cors_middleware.py  error_middleware.py  logging_middleware.py
backend/app/models/: __init__.py  audit_log.py  base.py  comment.py  diagram.py  folder.py  layout.py  model.py  publish_workflow.py  user.py  version.py  workspace.py  workspace_member.py
backend/app/parsers/: cypher_parser.py  sql_parser.py  xmi_parser.py
backend/app/repositories/: base.py  diagram_repository.py  folder_repository.py  layout_repository.py  model_repository.py  publish_repository.py  user_repository.py  version_repository.py  workspace_repository.py
backend/app/schemas/: __init__.py  auth.py  concept.py  diagram.py  export.py  folder.py  import_template.py  layout.py  lineage.py  model.py  publish.py  relationship.py  user.py  validation.py  version.py  workspace.py
backend/app/services/: diagram_service.py  graph_sync_service.py  import_service.py  semantic_model_service.py
backend/app/utils/: logger.py
backend/app/validation/: validation_engine.py
backend/app/validation/rules/: base_rule.py  bpmn_rules.py  er_rules.py  uml_rules.py
backend/migrations/versions/: fix_diagram_notation_column.py
backups/fix-20251230-191112/db/: __init__.py
backups/fix-20251230-191112/models/: __init__.py  audit_log.py  base.py  comment.py  diagram.py  layout.py  publish_workflow.py  workspace.py
database/falkordb/init/: 01-init-graph.cypher  01-init-graph.sh
database/falkordb/schema/: 01-constraints.cypher  02-indexes.cypher
database/postgres/init/: 00-create-user-and-db.sh  00-create-user-and-db.sql  01-init-db.sql
database/postgres/migrations/: add_workspace_deleted_at.sql
database/postgres/schema/: 01-users.sql  02-workspaces.sql  03-folders.sql  04-models.sql  05-diagrams.sql  06-layouts.sql  07-versions.sql  08-publish_workflows.sql  09-comments.sql  10-audit_logs.sql
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/debug/: FalkorDebugPanel.tsx
frontend/src/components/import/: CompleteStep.tsx  MappingStep.tsx  PreviewStep.tsx  ProgressIndicator.tsx  UploadStep.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/constants/: colors.ts
frontend/src/features/diagram-engine/: NodeFactory.ts
frontend/src/hooks/: useImportWorkflow.ts
frontend/src/pages/DiagramEditorPage/: DiagramEditorPage.tsx
frontend/src/pages/HomePage/: HomePage.tsx
frontend/src/pages/ImportWorkflow/: ImportWorkflow.tsx
frontend/src/pages/LoginPage/: LoginPage.tsx
frontend/src/services/: importApiClient.ts
frontend/src/store/: authStore.ts  diagramStore.ts  index.ts
frontend/src/styles/: globals.css
frontend/src/types/: diagram.types.ts  import.ts  window.d.ts
frontend/src/utils/: importUtils.ts
scripts/: complete-startup.sh  find-string36.sh  fix-all-imports.sh  fix-all-models.py  master-fix.sh  setup.sh  test.sh
(+38 files in other folders)
